--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
-.gradle
-/build/
+# IDEA config
+.idea/
+*.iml
 
-# Ignore Gradle GUI config
-gradle-app.setting
+# Java build folders
+out/
+build/
+target/
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
-# Cache of project
-.gradletasknamecache
-
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
+# Logs and binaries
+logs/
+*.log
+*.jar
+*.zip
+*.gz
+*.xml
